fix(autocomplete): updates the z-index to account for use within sidenav or dialog
Closes #2202

--- a/src/components/autocomplete/autocomplete.scss
+++ b/src/components/autocomplete/autocomplete.scss
@@ -179,7 +179,7 @@ md-autocomplete {
   padding: 0;
   overflow: auto;
   max-height: 41px * 5.5;
-  z-index: $z-index-backdrop - 1;
+  z-index: $z-index-tooltip;
   li {
     border-top: 1px solid #ddd;
     padding: 0 15px;
